projects/특이점이-온-개발자-도커-쿠버네티스/code/ex12/stores-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stores-deploy
spec:
  selector:
    matchLabels:
      app: stores
  template:
    metadata:
      labels:
        app: stores
    spec:
      containers:
        - name: stores
          image: hashicorp/http-echo:latest
          args:
            - "-text=매장 선택"
