projects/특이점이-온-개발자-도커-쿠버네티스/code/ex12/order-service.yml
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  type: ClusterIP
  selector:
    app: order
  ports:
    - port: 5678
