projects/특이점이-온-개발자-도커-쿠버네티스/code/ex12/stores-service.yml
apiVersion: v1
kind: Service
metadata:
  name: stores-service
spec:
  type: ClusterIP
  selector:
    app: stores
  ports:
    - port: 5678
